[gd_scene load_steps=3 format=3 uid="uid://6lfp1fgn6ar7"]

[ext_resource type="Script" path="res://Player/Dialog/dialog.gd" id="1_01hpw"]
[ext_resource type="Theme" uid="uid://bmwe6vvt4hxhw" path="res://Player/Dialog/OptionButtonTheme.tres" id="2_6pk0a"]

[node name="Dialog" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01hpw")

[node name="MainContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.55
anchor_right = 1.0
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="DialogContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="DialogTextLabel" type="Label" parent="MainContainer/DialogContainer"]
layout_mode = 2
text = "wesh les gars, bien ou bien ?"
visible_characters_behavior = 1

[node name="TextOptionsPadding" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OptionsHContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/OptionsHContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="OptionsVContainer" type="VBoxContainer" parent="MainContainer/OptionsHContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionButton1" type="Button" parent="MainContainer/OptionsHContainer/OptionsVContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_6pk0a")
text = "Je suis un caca prout"
alignment = 0
autowrap_mode = 2

[node name="OptionButton2" type="Button" parent="MainContainer/OptionsHContainer/OptionsVContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_6pk0a")
text = "Je suis un caca prout"
alignment = 0
autowrap_mode = 2

[node name="OptionButton3" type="Button" parent="MainContainer/OptionsHContainer/OptionsVContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_6pk0a")
text = "Je suis un caca prout"
alignment = 0
autowrap_mode = 2

[node name="OptionButton4" type="Button" parent="MainContainer/OptionsHContainer/OptionsVContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_6pk0a")
text = "Je suis un caca prout"
alignment = 0
autowrap_mode = 2

[connection signal="pressed" from="MainContainer/OptionsHContainer/OptionsVContainer/OptionButton1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="MainContainer/OptionsHContainer/OptionsVContainer/OptionButton2" to="." method="_on_option_button_2_pressed"]
[connection signal="pressed" from="MainContainer/OptionsHContainer/OptionsVContainer/OptionButton3" to="." method="_on_option_button_3_pressed"]
[connection signal="pressed" from="MainContainer/OptionsHContainer/OptionsVContainer/OptionButton4" to="." method="_on_option_button_4_pressed"]
